# open-ris-monitor

./: LICENSE  README-ISSUE22-MAPPING-FIX.md  README-ISSUE22.md  README.md  harvest_run.json  latest.json  package.json  pyproject.toml  tsconfig.json
docs/: adding-a-municipality.md  architecture.md  connectors.md  data-model-addition.md  data-model.md  development.md  document-identity-and-types.md  document-types.md  export-contract.md  gemeenteoplossingen-api-route-map.md  harvesting.md  issue-15-step-1-connector-endpoints.md  issue-15-step-2-raw-relation-harvest.md  issue-15-step-3-relation-normalization.md  issue-15-step-4-public-relation-exports.md  issue-15-step-5-docs-and-operations.md  issue-15-step-6-viewer-relation-context.md  issue-31-viewer-improvements.md  issue-37-align-public-relations.md  issue-37-recent-public-harvest-robustness.md  issue-37-recent-public-harvest.md  meetings-agenda-items-discovery.md  operations-harvest-strategy.md  quality-addition.md  quality.md  roadmap.md  site-viewer-hotfix.md  source-analysis-gemeenteoplossingen.md  storage-policy.md  validatie-ci.md  voting-and-decision-outcome-research.md
schemas/: agenda_item.schema.json  document.schema.json  meeting.schema.json  organization_group.schema.json  organization_group_membership.schema.json  organization_person.schema.json  organization_position.schema.json  organization_role.schema.json  relation.schema.json
site/: index.html
tests/: test_checksum_enricher.py  test_config.py  test_connector.py  test_dashboard_summary_issue_117.py  test_dataset_metadata.py  test_document_identity_analysis.py  test_document_normalizer.py  test_document_normalizer_issue95_document_type_fallback.py  test_document_normalizer_normalized_types.py  (+43 more)
(+99 files in other folders)
